styles/5-components/footer.scss
.c-footer {
    background: rgb(var(--color-1));
    color: rgb(var(--color-bg));
    padding: space(4xl) 0;

    &__partners {
        display: flex;
        justify-content: space-between;
        margin-bottom: space(4xl);

        @include screen-max(m) {
            align-items: flex-start;

            .c-partners {
                flex-wrap: wrap;

                .c-partners__label {
                    flex-basis: 100%;
                    margin-bottom: space(s);
                    margin-right: 0;
                    width: 100%;
                }

                .c-partners__and {
                    display: none;
                }

                .c-partners__logo {
                    margin-right: space(m);
                    height: 32px;
                }
            }
        }
    }

    &__bio {
        margin-bottom: space(4xl);
    }

    &__text {
        font-size: var(--font-size-s);
    }

    &__client {
    
        align-items: center;
        border-top: 1px solid rgb(var(--color-bg));
        display: flex;
        justify-content: space-between;
        padding-top: space(l);
    }

    &__copyright {
        font-size: var(--font-size-s);
    }

    &__clientLogoLink {
        display: inline-block;
    }

    &__clientLogo {
        height: 32px;
    }

    &__copyright{
        font-size: var(--font-size-s);
    }

    &__social {
        display: flex;
        gap: space(m);
    }

    &__socialIcon {
        height: 24px;
        width: 24px;
    }
}

@media screen and (max-width: 767px){
    .c-footer__client{
        flex-direction: column;
    }

    .c-footer__copyright{
        font-size: var(--font-size-s);
        padding-top: 1em;
        width: 100%;
        text-align: center;
    }
}


.c-footer li a {
    text-decoration: none;

    &:hover{
        text-decoration: underline;
    }
}

